turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:15: error: unclosed comment
  /*for (i<- 0 to colors.length -1) {
  ^Turmite:15: error: unclosed comment
  /*for (i<- 0 to colors.length -1) {
  ^Turmite:15: error: unclosed comment
  /*for (i<- 0 to colors.length -1) {
  ^Turmite:15: error: unclosed comment
  /*for (i<- 0 to colors.length -1) {
  ^Turmite:3: error: Missing closing brace `}' assumed here
var state = 0;
^Turmite:3: error: expected class or object definition
var state = 0;
^Turmite:4: error: expected class or object definition
val STOP = 0
^Turmite:5: error: expected class or object definition
val AVANCE = 1
^Turmite:6: error: expected class or object definition
val GAUCHE = 2
^Turmite:7: error: expected class or object definition
val DEMITOUR = 4
^Turmite:8: error: expected class or object definition
val DROITE = 8
^Turmite:12: error: expected class or object definition
def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
^Turmite:15: error: unclosed comment
  /*for (i<- 0 to colors.length -1) {
  ^